--- a/scenarioA/services/my-account/MSCA/EI/past-claims.html
+++ b/scenarioA/services/my-account/MSCA/EI/past-claims.html
@@ -154,25 +154,25 @@
   <p>View details on your past claims such as payment details and type of benefits received.</p>
   
    <table width="100%" border="1px">
-    <tr><center>
-      <th>Start Date of Claim</th>
-      <th>End Date of Claim</th>
-      <th><a href="#">Past Claims Messages</a></th>
+    <tr>
+	    <th><center>Start Date of Claim</center></th>
+      <th><center>End Date of Claim</center></th>
+      <th><center><a href="#">Past Claims Messages</center></a></th>
     </tr>
     <tr>
-      <td><a href="#">November 15, 2016</a></td>
-      <td>November 17, 2017</td>
-      <td><a href="#">View messages for this claim</a></td>
+      <td><center><a href="#">November 15, 2016</center></a></td>
+      <td><center>November 17, 2017</center></td>
+      <td><center><a href="#">View messages for this claim</center></a></td>
     </tr>
     <tr>
-      <td><a href="#">February 22, 2014</a></td>
-      <td>February 25, 2015</td>
-	    <td>Past claims messages feature unavailable before November 2016</td>
-	   </center>
+      <td><center><a href="#">February 22, 2014</center></a></td>
+      <td><center>February 25, 2015</center></td>
+	<td><center>Past claims messages feature unavailable before November 2016</center></td>
+	   
     </tr>
   </table><br><br>	
   
-  <a href="">Return to Employment Insurance main menu</a>
+  <a href="">Return to Employment Insurance main menu</a><br><br>
 	
 </section>
 </aside>
