--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -179,12 +179,12 @@
   
 <table class="table table-bordered">
   <thead> <tr>
-      <th scope="col" class="col-sm-8">...</th>
+      <th scope="col" class="col-sm-4">...</th>
       <th scope="col" class="col-sm-4">...</th>
     </tr>
     <tbody> 
   <tr>
-  <td>Start Date of Claim:</td>
+	  <td><strong><a href="###">Start Date of Claim:</a></strong></td>
   <td>December 4, 2018</td>
   </tr>
   <tr>
