--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -168,7 +168,7 @@
     
     <p>No Employment Insurance benefits are payable to you effective June 2, 2019 because you voluntarily left your employment without just cause within the meaning of the Employment Insurance Act.</p>
     
-  <p>However, you may be entitled to sickness, maternity, parental, compassionate care or parents of critically ill children benefits if you meet the necessary requirements. If any of these situations apply, please refer to the link<a href="###">http://www.servicecanada.gc.ca/eng/sc/ei/index.shtml</a> for eligibility criteria or call 1 800 206-7218 during business hours and press "0" to speak to a Call Center Agent.</p>
+  <p>However, you may be entitled to sickness, maternity, parental, compassionate care or parents of critically ill children benefits if you meet the necessary requirements. If any of these situations apply, please refer to the link <a href="###">http://www.servicecanada.gc.ca/eng/sc/ei/index.shtml</a> for eligibility criteria or call 1 800 206-7218 during business hours and press "0" to speak to a Call Center Agent.</p>
   
   <p>If you have any additional information which could change this decision, or would like more details, please contact us at either 1-800-206-7218 or at a Service Canada Centre. For faster service, always give us your Social Insurance Number. When you call us, you will also be required to provide your Access Code.</p>
   
@@ -178,14 +178,13 @@
   
   
 <table class="table table-bordered">
-   <tr>
-      <th scope="col" class="col-sm-4">...</th>
-      <th scope="col" class="col-sm-4">...</th>
-    </tr>
+   
     <tbody> 
   <tr>
-	  <td><strong><a href="###">Start Date of Claim:</a></strong></td>
-  <td>December 4, 2018</td>
+	  <td scope="col" class="col-sm-4">
+		  <strong><a href="###">Start Date of Claim:</a></strong>
+	  </td>
+  <td scope="col" class="col-sm-4">December 4, 2018</td>
   </tr>
   <tr>
   <td>Waiting Period:</td>
