--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -193,7 +193,35 @@
   </tbody>
 </table>
   
-  
+ <table class="table table-bordered"> 
+	 <thead>
+	<tr>
+	  <th scope="col" class="col-sm-4"><a href="###">Start Date of Claim:</a></th>
+	  <th><a href="###">Waiting Period:</a></th>
+	  <th><a href="###">Type of Benefit:</a></th>
+	  <th><a href="###">Total Insurable Earnings:</a></th>
+	  <th><a href="###">Benefit Rate:</a></th>
+	  <th><a href="###">Federal Tax:</a></th>
+	  <th><a href="###">Total Insurable Hours:</a></th>
+	  <th><a href="###">Total Weeks of Regular Entitlement:</a></th>
+	  <th>Weeks of Regular Benefits Paid:</th>
+	  <th>Total Weeks Paid:</th>
+	  <th><a href="###">End Date of Claim:</a></th>
+	  <th>Last Report Processed:</th>
+	  <th>Last Report Processed on:</th>
+	 </thead>  
+	
+	 </tr>
+	<tbody>
+	<tr>
+		<td scope="col" class="col-sm-4">December 4, 2018</td>
+		<td>eggs</td>
+	 </tr>
+	</tbody>
+	</table
+		
+	  
+	  
   
   
 
