--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -194,7 +194,7 @@
 </table>
   
  <table class="table table-bordered"> 
-	 <thead>
+	<tbody>
 	<tr>
 	  <th scope="col" class="col-sm-4"><a href="###">Start Date of Claim:</a></th>
 	  <th><a href="###">Waiting Period:</a></th>
@@ -209,13 +209,19 @@
 	  <th><a href="###">End Date of Claim:</a></th>
 	  <th>Last Report Processed:</th>
 	  <th>Last Report Processed on:</th>
-	 </thead>  
+	  
 	
 	 </tr>
-	<tbody>
+	
 	<tr>
 		<td scope="col" class="col-sm-4">December 4, 2018</td>
-		<td>eggs</td>
+		<td>December 18, 2018 to January 8, 2019</td>
+		<td>Regular benefits</td>
+		<td>$21,492</td>
+		<td>$537. See <a href="###">your payment details here.</a></td>
+		<td></td>
+		<td></td>
+		<td></td>
 	 </tr>
 	</tbody>
 	</table
