--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -193,45 +193,65 @@
   </tbody>
 </table>
   
- <table class="table table-bordered"> 
-	<tbody>
-	<tr>
-	  <th scope="col" class="col-sm-4"><a href="###">Start Date of Claim:</a></th>
-	  <th><a href="###">Waiting Period:</a></th>
-	  <th><a href="###">Type of Benefit:</a></th>
-	  <th><a href="###">Total Insurable Earnings:</a></th>
-	  <th><a href="###">Benefit Rate:</a></th>
-	  <th><a href="###">Federal Tax:</a></th>
-	  <th><a href="###">Total Insurable Hours:</a></th>
-	  <th><a href="###">Total Weeks of Regular Entitlement:</a></th>
-	  <th>Weeks of Regular Benefits Paid:</th>
-	  <th>Total Weeks Paid:</th>
-	  <th><a href="###">End Date of Claim:</a></th>
-	  <th>Last Report Processed:</th>
-	  <th>Last Report Processed on:</th>
-	  
-	
-	 </tr>
-	
-	<tr>
-		<td scope="col" class="col-sm-4">December 4, 2018</td>
-		<td>December 18, 2018 to January 8, 2019</td>
-		<td>Regular benefits</td>
-		<td>$21,492</td>
-		<td>$537. See <a href="###">your payment details here.</a></td>
-		<td></td>
-		<td></td>
-		<td></td>
-	 </tr>
-	</tbody>
-	</table
+ 
 		
-	  
-	  
-  
-  
+	  <table class="table table-bordered" style="width:100%">
+	 <tbody>
+  <tr>
+    <th><a href="###">Start Date of Claim:</a></th>
+    <td>December 4, 2018</td>
+  </tr>
+  <tr>
+    <th><a href="###">Waiting Period:</a></th>
+    <td>December 18, 2018 to January 8, 2019</td>
+  </tr>
+  <tr>
+    <th><a href="###">Type of Benefit:</a></th>
+    <td>Regular benefits</td>
+  </tr>
+  <tr>
+    <th><a href="###">Total Insurable Earnings:</a></th>
+    <td>$21,492</td>
+  </tr>
+  <tr>
+    <th><a href="###">Benefit Rate:</a></th>
+    <td>$537. See <a href="###">your payment details here.</a></td>
+  </tr>
+ <tr>
+    <th><a href="###">Federal Tax:</a></th>
+    <td>$67</td>
+  </tr>
+	 <tr>
+    <th><a href="###">Total Insurable Hours:</a></th>
+    <td>1500</td>
+  </tr>
+	 <tr>
+    <th><a href="###">Total Weeks of Regular Entitlement:</a></th>
+    <td>26</td>
+  </tr>
+	 <tr>
+    <th>Weeks of Regular Benefits Paid:</th>
+    <td>2</td>
+  </tr> 
+	 <tr>
+    <th>Total Weeks Paid:</th>
+    <td>2</td>
+  </tr>
+	 <tr>
+    <th><a href="###">End Date of Claim:</a></th>
+    <td>December 4, 2019</td>
+  </tr>
+	 <tr>
+    <th>Last Report Processed:</th>
+    <td>January 15, 2019 to January 29, 2019</td>
+  </tr>
+	 <tr>
+    <th>Last Report Processed on:</th>
+    <td>February 8, 2019</td>
+  </tr>
 
-  
+	 </tbody>
+	</table>
 
 
 
