--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -175,26 +175,7 @@
   <p>Our decisions are based on the Employment Insurance Act and its Regulations. If you disagree with this (these) decision(s), a request for a reconsideration of that decision must be made in writing to the Commission within 30 days of the date the decision was initially communicated to you.</p>
   
   <p>For more information on how to request a reconsideration and to obtain a "Request for Reconsideration" form, please visit <a href="###">www.ei-ae.gc.ca</a>.
-  
-  
-<table class="table table-bordered">
-   
-    <tbody> 
-  <tr>
-	  <td scope="col" class="col-sm-4">
-		  <strong><a href="###">Start Date of Claim:</a></strong>
-	  </td>
-  <td scope="col" class="col-sm-4">December 4, 2018</td>
-  </tr>
-  <tr>
-  <td>Waiting Period:</td>
-  <td>December 18, 2018 to January 8, 2019</td>
-  </tr>
-  </tbody>
-</table>
-  
- 
-		
+ 	
 	  <table class="table table-bordered" style="width:100%">
 	 <tbody>
   <tr>
@@ -253,6 +234,23 @@
 	 </tbody>
 	</table>
 
+	<summary>
+    <h3>Please note that the date provided in the "End Date of Claim" does not necessarily mean that EI benefits will be paid up to that date (show or hide details)</h3>
+  </summary>
+	<section>
+		
+		<p>You will stop receiving benefits once one of the following 2 conditions has occurred:</p>
+		
+		<ul>
+			<li>All the weeks of benefits to which you were entitled to have been paid. This occurs when the number of weeks displayed in the "Weeks of Regular Benefits Paid" row is equal to the number of weeks displayed in the "Total Weeks of Regular Entitlement".</li>
+		</ul>
+		<p>OR</p>
+		<ul>
+			<li>The "End Date of Claim" has been reached.</li>
+		</ul>
+    <p>Note: In certain situations, the "End Date of Claim" may be extended. Consult the Service Canada website <a href="###">"For how long will I receive benefits?"</a> for additional information.</p>
+    
+  </section>
 
 
 
