--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -234,20 +234,14 @@
 	 </tbody>
 	</table>
 
-	<summary>
-    <h3>Please note that the date provided in the "End Date of Claim" does not necessarily mean that EI benefits will be paid up to that date (show or hide details)</h3>
+	
+    
   </summary>
 	<section>
 		
-		<p>You will stop receiving benefits once one of the following 2 conditions has occurred:</p>
 		
-		<ul>
-			<li>All the weeks of benefits to which you were entitled to have been paid. This occurs when the number of weeks displayed in the "Weeks of Regular Benefits Paid" row is equal to the number of weeks displayed in the "Total Weeks of Regular Entitlement".</li>
-		</ul>
-		<p>OR</p>
-		<ul>
-			<li>The "End Date of Claim" has been reached.</li>
-		</ul>
+		
+		
     <p>Note: In certain situations, the "End Date of Claim" may be extended. Consult the Service Canada website <a href="###">"For how long will I receive benefits?"</a> for additional information.</p>
     
   </section>
@@ -255,7 +249,18 @@
 
 
  
- 	
+ 	<details class="acc-group">
+ 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group"}'>Please note that the date provided in the "End Date of Claim" does not necessarily mean that EI benefits will be paid up to that date (show or hide details)</summary>
+ 	<div class="tgl-panel">
+ 		<p>You will stop receiving benefits once one of the following 2 conditions has occurred:</p>
+
+	<ul>
+		<li>All the weeks of benefits to which you were entitled to have been paid. This occurs when the number of weeks displayed in the "Weeks of Regular Benefits Paid" row is equal to the number of weeks displayed in the "Total Weeks of Regular Entitlement".</li>
+		<br><p>OR</p>
+		<li>The "End Date of Claim" has been reached.</li>
+		</ul>
+ 			</div>
+ 		</details>
   	
 	
 
