--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -242,7 +242,7 @@
 	<ul>
 		<li>All the weeks of benefits to which you were entitled to have been paid. This occurs when the number of weeks displayed in the "Weeks of Regular Benefits Paid" row is equal to the number of weeks displayed in the "Total Weeks of Regular Entitlement".</li>
 		<br><p>OR</p>
-		<li>The "End Date of Claim" has been reached.</li>
+		<br><li>The "End Date of Claim" has been reached.</li>
 		</ul>
 		   <p>Note: In certain situations, the "End Date of Claim" may be extended. Consult the Service Canada website <a href="###">"For how long will I receive benefits?"</a> for additional information.</p>
  			</div>
