--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -241,21 +241,30 @@
 
 	<ul>
 		<li>All the weeks of benefits to which you were entitled to have been paid. This occurs when the number of weeks displayed in the "Weeks of Regular Benefits Paid" row is equal to the number of weeks displayed in the "Total Weeks of Regular Entitlement".</li>
-		<p>OR</p>
-		<li>The "End Date of Claim" has been reached.</li>
+		<br><p>OR</p>
+		<br><li>The "End Date of Claim" has been reached.</li>
 		</ul>
 		   <p>Note: In certain situations, the "End Date of Claim" may be extended. Consult the Service Canada website "<a href="###">For how long will I receive benefits?</a>" for additional information.</p>
  			</div>
  		</details>
   	
-	
+	<h3>Related links</h3>
+	<ul>
+		<li><a href="###">My EI payment information</a></li>
+		<li><a href="###">View my EI status and correspondence</a></li>
+		<li><a href="###">My past EI claim details</a></li>
+		<li><a href="###">Records of Employment</a></li>
+		<li><a href="###">Declare training or an absence from Canada</a></li>
+		<li><a href="###">I made a mistake on my EI report</a></li>
+	</ul>
+	<p><a href="###">Return to Employment Insurance main menu</a></p>
 
 </div>
 </div>
 </span> 
 <script type="text/javascript">var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					cdnEnv: "prod",dateModified: "2019-06-29",screenIdentifier: "MSCA M 001",showPostContent: false,
+					cdnEnv: "prod",dateModified: "2017-09-30",screenIdentifier: "MSCA M 001",showPostContent: false,
 					showShare: false
 				});</script>
 </main>
