--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -258,7 +258,7 @@
 		<li><a href="###">I made a mistake on my EI report</a></li>
 	</ul>
 	<p><a href="###">Return to Employment Insurance main menu</a></p>
-
+	</div>
 </div>
 </div>
 </span> 
