--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/latest-claim-details.html
@@ -80,8 +80,8 @@
       <div class="container">
         <div class="row">
           <section class="col-sm-7">
-            <h2 class="wb-inv">My Service Canada Account</h2>
-            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account</a> </section>
+            <h2 class="wb-inv">My Service Canada Account (MSCA)</h2>
+            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account (MSCA)</a> </section>
           <nav class="col-sm-5 hidden-xs hidden-print" role="navigation">
             <h2 class="wb-inv">Account menu</h2>
             <ul class="app-list-account list-unstyled">
@@ -137,13 +137,21 @@
       <div class="container">
         <div class="row">
           <ol class="breadcrumb">
-            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a> > <a href="#">EI</a> > Latest Claim Status</li>
+            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a></li>
+            <li>
+                EI
+            </li>
+		  <li>
+			  My latest claim
+		  </li>
           </ol>
-        </div>
+       
+       </div>
       </div>
     </nav>
   </header>
 </div>
+	
 <section class="container">
   <a class="btn btn-default" href="#" role="button">Featured services</a>
   <a class="btn btn-default" href="#" role="button">Help</a><br>
