--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
@@ -154,7 +154,7 @@
 	
 <section class="container">
   <a class="btn btn-default" href="#" role="button">Featured services</a>
-  <a class="btn btn-default" href="#" role="button">Help</a><br>
+	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
   
   <h1 property="name" id="wb-cont" dir="ltr">My Latest Claim</h1>
   
