--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
@@ -146,11 +146,13 @@
 		  </li>
           </ol>
        
-       </div>
+      
+	  </div>
       </div>
     </nav>
   </header>
 </div>
+<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 	
 <section class="container">
   <a class="btn btn-default" href="#" role="button">Featured services</a>
