--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
@@ -80,8 +80,8 @@
       <div class="container">
         <div class="row">
           <section class="col-sm-7">
-            <h2 class="wb-inv">My Service Canada Account (MSCA)</h2>
-            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account (MSCA)</a> </section>
+            <h2 class="wb-inv">My Service Canada Account</h2>
+            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account</a> </section>
           <nav class="col-sm-5 hidden-xs hidden-print" role="navigation">
             <h2 class="wb-inv">Account menu</h2>
             <ul class="app-list-account list-unstyled">
