--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
@@ -258,7 +258,7 @@
 		   <p>Note: In certain situations, the "End Date of Claim" may be extended. Consult the Service Canada website "<a href="###">For how long will I receive benefits?</a>" for additional information.</p>
  			</div>
  		</details>
-  	
+  	<section>
 	<h3>Related links</h3>
 	<ul>
 		<li><a href="###">My EI payment information</a></li>
@@ -268,7 +268,10 @@
 		<li><a href="###">Declare training or an absence from Canada</a></li>
 		<li><a href="###">I made a mistake on my EI report</a></li>
 	</ul>
-	<p><a href="###">Return to Employment Insurance main menu</a></p>
+	</section>
+	<section>
+		<p><a href="###">Return to Employment Insurance main menu</a></p>
+	</section>
 	
 </div>
 </div>
