--- a/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
@@ -172,21 +172,42 @@
 
 
   <table class="table table-bordered" style="width:100%">
-  <thead>
-  <tr>1</tr>
-  <tr>2</tr>
-  <tr>3</tr>
-  
-  </thead>
   
 	 <tbody>
-
-    <td>December 4, 2018</td>
+		 <tr>
+			 <th>Report Covering Period</th>
+			 <td><a href="###">January 15, 2019 to January 29, 2010</a></td>
+			 <td><a href="###">January 1, 2019 to January 14, 2019</a></td>
+			 <td><a href="###">December 19, 2018 to December 31, 2018</a></td>
+			 <td><a href="###">December 4, 2018 to December 18, 2018</a></td>
+		 </tr>
+		 <tr>
+			 <th>Data Report Processed</th>
+			 <td>February 8, 2019</td>
+			 <td>January 24, 2019</td>
+			 <td>January 10, 2019</td>
+			 <td>December 28, 2018</td>
+		 </tr>
+		 <tr>
+			 <th>Net Amount Paid</th>
+			 <td>$382</td>
+			 <td>$382</td>
+			 <td>$382</td>
+			 <td>$382</td>
+		 </tr>
+		 
+		 <tr>
+			 <th><u>Amended report</u></th>
+			 <td>No</td>
+			 <td>No</td>
+			 <td>No</td>
+			 <td>No</td>
+		 </tr>
   
  
  
     <td>December 18, 2018 to January 8, 2019</td>
-  <
+  
   <tr>
     <th><a href="###">Type of Benefit:</a></th>
     <td>Regular benefits</td>
