--- a/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
@@ -197,25 +197,12 @@
 		 </tr>
 		 
 		 <tr>
-			 <th><u>Amended report</u></th>
+			 <th><u>Amended Report</u></th>
 			 <td>No</td>
 			 <td>No</td>
 			 <td>No</td>
 			 <td>No</td>
 		 </tr>
-  
- 
- 
-    <td>December 18, 2018 to January 8, 2019</td>
-  
-  <tr>
-    <th><a href="###">Type of Benefit:</a></th>
-    <td>Regular benefits</td>
-  </tr>
-  <tr>
-    <th><a href="###">Total Insurable Earnings:</a></th>
-    <td>$21,492</td>
-  </tr>
  
 
 	 </tbody>
