--- a/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
@@ -170,26 +170,35 @@
    <section>
 
 
-
+<div>
   <table class="table table-bordered" style="width:100%">
+	  
+	  <thead>
+		  <tr>
+			  <th scope="col">Report Covering Period</th>
+		  </tr>
+		  <tr><th scope="col">Data Report Processed</th></tr>
+		  <tr><th scope="col">Net Amount Paid</th></tr>
+		  <tr><th scope="col"><u>Amended Report</u></th></tr>
+	  </thead>
   
 	 <tbody>
 		 <tr>
-			 <th>Report Covering Period</th>
+			
 			 <td><a href="###">January 15, 2019 to January 29, 2010</a></td>
 			 <td><a href="###">January 1, 2019 to January 14, 2019</a></td>
 			 <td><a href="###">December 19, 2018 to December 31, 2018</a></td>
 			 <td><a href="###">December 4, 2018 to December 18, 2018</a></td>
 		 </tr>
 		 <tr>
-			 <th>Data Report Processed</th>
+			
 			 <td>February 8, 2019</td>
 			 <td>January 24, 2019</td>
 			 <td>January 10, 2019</td>
 			 <td>December 28, 2018</td>
 		 </tr>
 		 <tr>
-			 <th>Net Amount Paid</th>
+			
 			 <td>$382</td>
 			 <td>$382</td>
 			 <td>$382</td>
@@ -197,7 +206,7 @@
 		 </tr>
 		 
 		 <tr>
-			 <th><u>Amended Report</u></th>
+			
 			 <td>No</td>
 			 <td>No</td>
 			 <td>No</td>
@@ -207,6 +216,7 @@
 
 	 </tbody>
 	</table>
+	<div>
 
 
 
