--- a/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
@@ -174,12 +174,11 @@
   <table class="table table-bordered" style="width:100%">
 	  
 	  <thead>
-		  <tr>
-			  <th scope="col">Report Covering Period</th>
-		  </tr>
-		  <tr><th scope="col">Data Report Processed</th></tr>
-		  <tr><th scope="col">Net Amount Paid</th></tr>
-		  <tr><th scope="col"><u>Amended Report</u></th></tr>
+		 
+		  <th scope="col">Report Covering Period</th>
+		  <th scope="col">Data Report Processed</th>
+		  <th scope="col">Net Amount Paid</th>
+		  <th scope="col"><u>Amended Report</u></th>
 	  </thead>
   
 	 <tbody>
