--- a/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
@@ -168,8 +168,6 @@
    <p>To prevent any delays, <strong>you must complete your report within three weeks of its due date.</strong></p>
    
    <section>
-
-
 <div>
   <table class="table table-bordered" style="width:100%">
 	  
@@ -216,6 +214,8 @@
 	 </tbody>
 	</table>
 	<div>
+		</section>
+	
 
 
 
