--- a/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
@@ -210,144 +210,39 @@
 
 	 </tbody>
 	</table>
+	<p>See more <a href="###">details on your EI claim here</a>.</p>
 	<div>
 		</section>
-	
-
-
-
-</section>
-   
-   <section>
-<h3>Payment and direct deposit</h3>
-        <ul>
-        <li><a href="###">View my payment information</a></li>
-        <li><a href="###">Direct deposit (EI)</a></li>
-        </ul>
-</section>
-  
 	<section>
-<h3>Records of Employment</h3>
-        <ul>
-        <li><a href="###">View my Records of Employment</a></li>
-        <li><strong>Related form:</strong><a href="###">INS3166 - Request for Record of Employment</a></li>
-        </ul>
-</section>
-  
-  <section>
-<h3>My EI report</h3>
-        <ul>
-        <li><a href="###">Complete my EI report online</a></li>
-        <li><a href="###">I made a mistake on my EI report</a></li>
-        </ul>
-</section>
-
+		<p>Please note that this is the most up-to-date information available in our system. Our Call Centre agents have access to the same information presented here. Any information on your claim today can be viewed online on the next business day. </p>
+	</section>
+	
+	<h3>Direct Deposit for EI</h3>
+	<p>You're not currently signed up for Direct Deposit which is our standard method for issuing EI payments. With Direct Deposit:</p>
+	<ul>
+		<li>your EI payments are deposited electronically into your bank account</li>
+		<li>you'll receive your payments faster</li>
+	</ul>
+	</section>
+	  
+	   <section>
+	   <a class="btn btn-primary" href="###">Sign up for Direct Deposit today</a>
+	   </section>
 <section>
-<h3>eForms (e.g. training; absence from Canada)</h3>
-<p><a href="###">Fill out an eForm</a> to tell us about:</p>
-        <ul>
-        <li>An absence from Canada (vacation and other reasons); and/or</li>
-        <li>A course or training program</li>
-        </ul>
-        <p>Access your current draft and/or past eForms:</p>
-        <ul>
-        <li><a href="###">Draft eForms</a></li>
-        <li><a href="###">Completed eForms</a></li>
-        </ul>
+	<h3>Related links</h3>
+	<ul>
+		<li><a href-"###">View my EI status and correspondence</a></li>
+		<li><a href="###">My past claim details</a></li>
+		<li><a href="###">Records of Employment</a></li>
+		<li><a href="###">Declare a training or absence from Canada</a></li>
+		<li><a href="###">I made a mistake on my EI report</a></li>
+	</ul>
 </section>
-  
-  <section>
-<h3>My contact/personal information for EI</h3>
-        <ul>
-        <li><a href="###">My mailing address and telephone number</a></li>
-        <li><a href="###">Register for Alert Me</a></li>
-        <li><a href="###">My province of residence</a></li>
-        <li><a href="###">My preferred language for written communications</a></li>
-        </ul>
-       <br> <strong>Related forms:</strong> </br>
-       <ul>
-       <li><a href="###">INS3124 - Individual’s consent to disclosure and/or use of personal information</a></li>
-       <li><a href="###">INS3280 - Appointment of representative</a></li>
-       </ul>
-</section>
-  
-   <section>
-<h3>Tax slips for EI</h3>
-        <ul>
-        <li><a href="###">Tax slips (T4E)</a></li>
-        <li><a href="###">Tax slips mailing options</a></li>
-        </ul>
-</section>
-
-<section>
-<h3>EI for the self-employed</h3>
-        <ul>
-        <li><a href="###">Register for EI for the Self-Employed</a></li>
-        <li><a href="###">Agreement status for Self-Employed EI</a></li>
-        </ul>
-</section>
-
-<section>
-<h2>EI Forms</h2>
-</section>
-
-<section>
-<h4>General EI forms</h4>
-        <ul>
-        <li><a href="###">INS3124 - Individual’s consent to disclosure and/or use of personal information</a></li>
-        <li><a href="###">INS3166 -  Request for Record of Employment</a></li>
-        <li><a href="###">INS3280 - Appointment of representative</a></li>
-        </ul>
-</section>
-
-<section>
-<h4>Family Caregiver and Compassionate Care Benefits forms</h4>
-        <ul>
-        <li><a href="###">INS5223 – Family member attestation for Employment Insurance Family Caregiver Benefits or Compassionate Care Benefits</a></li>
-        <li><a href="###">INS5216A - Authorization to release a Medical Certificate for Employment Insurance</a></li>
-        <li><a href="###">INS5216B - Medical certificate for Employment Insurance Compassionate Care Benefits</a></li>
-        <li><a href="###">INS5242A - Authorization to release a Medical Certificate for Employment Insurance Family Caregiver Benefits</a></li>
-        <li><a href="###">INS5242B – Medical Certificate for Employment Insurance Family Caregiver Benefits</a></li>
-        </ul>
-</section>
-
-
-<section>
-<h4>Sickness Benefits form</h4>
-        <ul>
-        <li><a href="###">INS5223 – Family member attestation for Employment Insurance Family Caregiver Benefits or Compassionate Care Benefits</a></li>
-        </ul>
-</section>
-
-<section>
-<h4>Maternity and/or Parental Benefits form</h4>
-        <ul>
-        <li><a href="###">INS5168 – Maternity and/or Parental benefits Annex 3</a></li>
-        </ul>
-</section>
-
-<section>
-<h4><a href="###">All EI forms</a></h4>
-</section>
-
-<section>
-<h3>Related services and information (EI)</h3>
-        <ul>
-        <li><a href="###">Apply for EI online</a></li>
-        <li><a href="###">Appeal an EI decision</a></li>
-        <li><a href="###">Find a job using Job Bank</a></li>
-        <li><a href="###">Complete additional EI forms</a></li>
-        <li><a href="###">EI Publications</a></li>
-        </ul>
-</section>
-
-<section>
-<h3>Contact EI</h3>
-        <ul>
-        <li><a href="###">Call EI</a></li>
-        <li><a href="###">Visit EI in person</a></li>
-        </ul>
-</section>
+	   <section>
+		   <a href="###">Return to Employment Insurance main menu</a>
+	   </section>
+   
+   
 
 
   </span> 
