--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -170,81 +170,92 @@
       </div>
       <div class="panel panel-default"> 
         <!-- Default panel contents -->
-        <div class="panel-heading"><strong>Help and Support</strong></div>
+        <div class="panel-heading"><strong>Related services and information</strong></div>
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="">CPP/OAS Applications</a></li>
-          <li class="list-group-item"><a href="">Related services and information</a></li>
+          <li class="list-group-item"><a href="">Apply for my CPP survivor's pension</a></li>
+          <li class="list-group-item"><a href="">Apply for my CPP children's benefit </a></li>
+          <li class="list-group-item"><a href="">Apply for a CPP death benefit</a></li>
+			<li class="list-group-item"><a href="">Apply for my OAS pension</a></li>
+          <li class="list-group-item"><a href="">Apply for my Guaranteed Income Supplement</a></li>
+          <li class="list-group-item"><a href="">Apply for my Allowance Program</a></li>
+			<li class="list-group-item"><a href="">Apply for my Allowance for the Survivor Program</a></li>
+          <li class="list-group-item"><a href="">Apply for my International Benefits</a></li>
+			<li class="list-group-item"><a href="">Canadian Retirement Income Calculator </a></li>
+			<li class="list-group-item"><a href="">CPP Index</a></li>
+			<li class="list-group-item"><a href="">OAS Index</a></li>
           <li class="list-group-item"><a href="">Contact us</a></li>
         </ul>
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod justo eget ligula porttitor, at imperdiet quam elementum. Suspendisse aliquet purus ante, vitae molestie dui euismod vitae. Curabitur efficitur nibh turpis.</p>
+      <p>Canada Pension Plan (CPP)/Old Age Security (OAS) allows you to apply to CPP retirement pension, CPP disability benefit and OAS pension and the GIS and provides the ability to view your current application status.</p>
+
+<p>CPP/OAS also allows you to access your electronic T4E, view your CPP contributions, request a CPP Child-Rearing Provision and/or give consent for someone to communicate with CPP/OAS on your behlaf. </p>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-1" class="h3 mrgn-tp-0">CPP Application</h2>
           <p>Apply for CPP or view detailed information on your application status.</p>
-          <button type="button" class="btn btn-default">Apply</button>
-          <button type="button" class="btn btn-default">View application status</button>
+          <button type="button" class="btn btn-default">Apply for my CPP retirement pension</button>
+			<button type="button" class="btn btn-default">Apply for my CPP disability benefit</button>
+          <button type="button" class="btn btn-default">Application status</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-2" class="h3 mrgn-tp-0">OAS/GIS Pension Application</h2>
           <p>Apply for OAS/GIS or view detailed information on your application status.</p>
-          <button type="button" class="btn btn-default">Apply</button>
-          <button type="button" class="btn btn-default">View application status</button>
-          <button type="button" class="btn btn-default">Delay receiving pension</button>
+          <button type="button" class="btn btn-default">Apply for my OAS pension and the GIS</button>
+          <button type="button" class="btn btn-default">Application status</button>
+          <button type="button" class="btn btn-default">Delay receiving my OAS pension</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-3" class="h3 mrgn-tp-0">Personal information</h2>
-          <p>Personal information is used to capture your mailing address, province of residence and your preferred language specific to your EI application(s). All correspondance will be sent to the address, including any payments.</p>
-          <button type="button" class="btn btn-default">Select mailing address</button>
-          <button type="button" class="btn btn-default">Select telephone number</button>
+          <p>Personal information is used to capture your mailing address, province of residence and your preferred language specific to your CPP application(s). All correspondance will be sent to the address, including any payments.</p>
+          <button type="button" class="btn btn-default">Address</button>
+          <button type="button" class="btn btn-default">Telephone number</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-4" class="h3 mrgn-tp-0">Payment and Direct Deposit</h2>
           <p>The payment and direct deposit is used to view your most up-to-date payment reports and sign up for Direct Deposit.</p>
-          <button type="button" class="btn btn-default">View payment information</button>
-          <button type="button" class="btn btn-default">Sign up for Direct deposit</button>
+          <button type="button" class="btn btn-default">Payment information</button>
+          <button type="button" class="btn btn-default">Direct deposit (CPP/OAS)</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-5" class="h3 mrgn-tp-0">CPP Contributions and Benefits</h2>
-          <p>Sed ullamcorper, libero elementum viverra dapibus, dolor ligula vulputate lectus, sed euismod felis eros et velit.</p>
-          <button type="button" class="btn btn-default">View contributions</button>
-          <button type="button" class="btn btn-default">View estimated monthly benefits</button>
+          <p>CPP Contribtuions and Benefits is used to view your contributions and your pensionable earnings.</p>
+          <button type="button" class="btn btn-default">CPP contributions</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-6" class="h3 mrgn-tp-0">CPP Child-Rearing Provision</h2>
-          <p>Sed ullamcorper, libero elementum viverra dapibus, dolor ligula vulputate lectus, sed euismod felis eros et velit.. </p>
-          <button type="button" class="btn btn-default">View Child-Rearing Provision</button>
-          <button type="button" class="btn btn-default">Request Child-Rearing Provision</button>
+          <p>If you took time off from work or worked less to look after your young children, you may be able to increase the amount of your CPP retirement pension and other CPP benefits with the child-rearing provisions.</p>
+          <button type="button" class="btn btn-default">Request my Child-Rearing Provision</button>
+			<button type="button" class="btn btn-default">My Child-Rearing Provision</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-7" class="h3 mrgn-tp-0">Tax information</h2>
           <p>Consider your overall tax situation before you choose to have federal tax deducted from your CPP and OAS monthly benefits. You can change the amount of federal taxes deducted at any time.</p>
-          <button type="button" class="btn btn-default">View your Tax slips (T4A, NR4)</button>
-          <button type="button" class="btn btn-default">Mailing options</button>
-          <button type="button" class="btn btn-default">Change tax deductions</button>
+          <button type="button" class="btn btn-default">Tax slips (T4A, NR4)</button>
+          <button type="button" class="btn btn-default">Tax slip mailing options</button>
+          <button type="button" class="btn btn-default">Federal voluntary tax deductions for CPP/OAS</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-8" class="h3 mrgn-tp-0">Consent on my behalf</h2>
-          <p>Sed ullamcorper, libero elementum viverra dapibus, dolor ligula vulputate lectus, sed euismod felis eros et velit.</p>
-          <button type="button" class="btn btn-default">View consent</button>
+          <p>Use this application to name an authorized person (for example: your spouse, a member of your family, a friend or your accountant, etc.) to whom you give consent to communicate on your behalf with Service Canada about your CPP and OAS.</p>
+          <button type="button" class="btn btn-default">Give consent for someone to communicate with CPP/OAS on my behalf</button>
         </div>
       </div>
     </div>
