--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -231,7 +231,7 @@
           <h2 id="a1-6" class="h3 mrgn-tp-0">Tax information</h2>
           <p>The Tax slips is used to display your tax slips for the current year and for the past six years. </p>
           <button type="button" class="btn btn-default">Tax slips (T4E)</button>
-          <button type="button" class="btn btn-default">Tax slip maailing options</button>
+          <button type="button" class="btn btn-default">Tax slip mailing options</button>
         </div>
       </div>
       <div class="panel panel-default">
@@ -239,7 +239,7 @@
           <h2 id="a1-7" class="h3 mrgn-tp-0">eForms</h2>
           <p>The eForms is used to report an absence from Canada (vacation and other reasons), a course or training program  and/or other parent information for parental benefits.</p>
 			
-          <button type="button" class="btn btn-default">Privde new information regarding my claim</button>
+          <button type="button" class="btn btn-default">Provide new information regarding my claim</button>
         </div>
       </div>
       <div class="panel panel-default">
