--- a/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html
@@ -176,7 +176,7 @@
    </ul><br>
    
 	   <section>
-		   <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a>
+		   <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
 	   </section>
    
    
