--- a/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html
@@ -167,8 +167,8 @@
   </div>
   <br />
 	 
-   <p>We realize that mistakes can happen. If you make a mistake filling out forms or reports, or if there is a change in your circumstances that could affect your EI benefits, advise Service Canada immediately.</p><br>
-   <p><strong>Letting us know of a mistake or a change early is your best way to prevent future problems with your claim, or avoid a penalty or prosecution.</strong></p><br>
+   <p>We realize that mistakes can happen. If you make a mistake filling out forms or reports, or if there is a change in your circumstances that could affect your EI benefits, advise Service Canada immediately.</p>
+   <p><strong>Letting us know of a mistake or a change early is your best way to prevent future problems with your claim, or avoid a penalty or prosecution.</strong></p>
    <p>To let us know of a mistake or a change:</p>
    <ul>
    <li>call us at <strong>1-800-206-7218</strong>, from 8:30 am to 4:30 pm local time, and press "0" to speak to a representative; or</li>
