--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -236,7 +236,7 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-6" class="h3 mrgn-tp-0">eForms</h2>
-          <p>If you have an active EI claim and depending on the type of benefits you are receiving this service will display eForms which allow you to submit information to your claim electronically. eForms will only be displayed if you are on an active claim and you are receiving benefits to which these eForms apply. Note that eForms will not be displayed if you do not have an active EI claim or if these eForms do not apply to the type of benefits you are receiving.</p>
+          <p>If you have an active EI claim and depending on the type of benefits you are receiving this service will display eForms which allow you to submit information to your claim electronically. eForms will only be displayed if you are on an active claim and you are receiving benefits to which these eForms apply. Note that eForms will not be displayed if you do not have an active EI claim or if these eForms do not apply to the type of benefits you are receiving (see the Help text).</p>
 			
           <button type="button" class="btn btn-default">Provide new information regarding my claim</button>
         </div>
